# MechMult

./: .gitignore  README.md  analyze.py  pyproject.toml  train.py  visualize_loss.py
trials_p97/: checkpoint_t0.pt  checkpoint_t1.pt  checkpoint_t2.pt  checkpoint_t3.pt  checkpoint_t4.pt  metrics_t0.json  metrics_t1.json  metrics_t2.json  metrics_t3.json  metrics_t4.json
