[project]
name = "mechmult"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "mlx>=0.31.1",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
    "torch>=2.11.0",
]
